# firescript

./: .coveragerc  .gitignore  .snyk  404.html  CLAUDE.md  CMakeLists.txt  LICENSE.txt  README.md  SECURITY.md  debug_output.txt  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: copilot-instructions.md
arrays/: index.html
benchmarks/: index.html
changelog/: index.html
classes/: index.html
control_flow/: index.html
docs/: CNAME  README.md  arrays.md  benchmarks.md  changelog.md  classes.md  control_flow.md  firescript_philosophy.md  functions.md  getting_started.md  glossary.md  language_specification.md  scoping.md  type_system.md  variables.md
examples/: array_tests.fire  built-ins.fire  classes.fire  grammar.fire  meta-attributes.fire  test.fire  units.fire  whitespace_doesnt_matter.fire
firescript/: ast_to_fir.py  builtin_methods.py  c_code_generator.py  compiler_pipeline.py  compiler_types.py  enums.py  errors.py  frontend_pipeline.py  imports.py  ir_analysis.py  lexer.py  log_formatter.py  lsp_server.py  main.py  parser.py  preprocessor.py  semantic_analyzer.py  targets.py
firescript_philosophy/: index.html
functions/: index.html
getting_started/: index.html
glossary/: index.html
internal/: index.html
kiln/: kiln.toml
language_specification/: index.html
scoping/: index.html
scripts/: analyze_codebase.py  bootstrap_kiln.py
search/: search_index.json
src/: CMakeLists.txt  lexer.cpp  lexer.h  logger.h  main.cpp
tests/: TEST_MANIFEST.md  asm_encoding_tests.py  cli_runner.py  error_runner.py  fir_runner.py  run.py  (+7 more)
(+1228 files in other folders)
