[project]
name = "firescript"
version = "0.1.1"
description = "A strongly typed language that compiles natively or to JavaScript, allowing the language to be used almost anywhere."
readme = "README.md"
authors = [
    {name = "Alec", email = "alec@alecj.tk"}
]
license = {file = "LICENSE.txt"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/alec-jensen/firescript"
"Bug Tracker" = "https://github.com/alec-jensen/firescript/issues"